--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pulse</title>
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="icons/runsmart_logo.png" alt="logo">
+                </a>
+                <div class="header__official xs_disabled">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="button">Заказать звонок</button>
+                </div>
+            </header>
+
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/clock_icon.png" alt="clock_icon">
+                        Время подбора:<br>10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/delivery_icon.png" alt="delivery_icon">
+                        Бесплатная<br>доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/questions_icon.png" alt="questions_icon">
+                        Ответим<br>на все вопросы
+                    </div>
+                </div>
+                <button class="button button_main">заказать консультацию</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">перейти в каталог</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="advantages">
+        <div class="container">
+            <div class="title">наши преимущества</div>
+            <div class="advantages__wrapper">
+                <div class="advantages__block">
+                    <img src="icons/cup_icon.png" alt="cup">
+                    <div class="advantages__title">Делимся опытом</div>
+                    <div class="advantages__descr">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                </div>
+                <div class="advantages__block">
+                    <img src="icons/heart_icon.png" alt="heart">
+                    <div class="advantages__title">Заботимся о здоровье</div>
+                    <div class="advantages__descr">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                </div>
+                <div class="advantages__block">
+                    <img src="icons/shoe_icon.png" alt="shoe">
+                    <div class="advantages__title">Учим бегать</div>
+                    <div class="advantages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
