--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 
     <div class="advantages">
         <div class="container">
-            <div class="title">наши преимущества</div>
+            <h2 class="title">наши преимущества</h2>
             <div class="advantages__wrapper">
                 <div class="advantages__block">
                     <img src="icons/cup_icon.png" alt="cup">
@@ -73,6 +73,21 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">Получите бесплатную консультацию<br>по подбору пульсометра </h2>
+            <div class="consultation__descr">Просто заполните форму заявки<br>и мы перезвоним вам в течении 10 минут</div>
+
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+                <!-- if there's a button inside a form, it will automatically take the submit responsibility for itself -->
+                <button class="button button_submit">заказать консультацию</button>
+            </form>
+        </div>    
     </div>
 </body>
 </html>
