--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulse</title>
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="icon" type="image/x-icon" href="/icons/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
-    <link rel="stylesheet" href="css/animate.min.css"/>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -92,17 +90,17 @@
         </div>    
     </section>
 
-    <section class="carousel">
+    <div class="carousel">
         <div class="container mobile-containerless">
             <div class="carousel__wrapper">
                 <div class="carousel__slide"><img src="img/slide_1.png" alt="slide_1"></div>
                 <div class="carousel__slide"><img src="img/slide_2.png" alt="slide_2"></div>
                 <div class="carousel__slide"><img src="img/slide_3.png" alt="slide_3"></div>
             </div>
-            <button type="button" class="carousel__prev"><img src="icons/arrow_prev.png"></button>
-            <button type="button" class="carousel__next"><img src="icons/arrow_next.png"></button>
+            <button type="button" class="carousel__prev"><img src="icons/arrow_prev.png" alt="arrow_icon"></button>
+            <button type="button" class="carousel__next"><img src="icons/arrow_next.png" alt="arrow_icon"></button>
         </div>
-    </section>
+    </div>
 
     <section class="catalog">
         <div class="container">
@@ -491,7 +489,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
     <script src="https://kit.fontawesome.com/32d95f43bb.js" crossorigin="anonymous"></script>
     <script src="js/jquery.validate.min.js"></script>
-    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
